--- a/index.html
+++ b/index.html
@@ -35,10 +35,54 @@
         </div>
       </div>
     <!--BAGIAN BENNER HOMESCREEN-->
-    <div class="container">
-        <div class="main"><h1>CSS Grid or Flexbox </h1>
+     <div class="container">
+    <!-- Banner -->
+    <div class="BannerIntro">
+      <img src="https://images.unsplash.com/photo-1453728013993-6d66e9c9123a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8dmlld3xlbnwwfHwwfHw%3D&w=1000&q=80" alt="">
+      <div class="txtDescription">
+        <p class="TitleSection">Intership Deskorat Digital Bussnis</p>
+        <p class="DescritptionSection">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nostrum consequatur beatae, totam nemo a quae reprehenderit doloremque sunt, voluptates alias dolores quo voluptatem nobis expedita aperiam eaque perspiciatis odit facere neque possimus molestias? Ad minima ipsa doloremque facilis libero repudiandae, voluptatum aliquid ipsam eum, sint earum quas, adipisci laboriosam exercitationem praesentium itaque. Deserunt reiciendis ab cupiditate nobis error corporis?</p>
+
+        <div class="btn-wrapper">
+          <a href="#" class="btn btn-1">Lihat Detail</a>
+          <a href="#" class="btn btn-2">Lihat Internship</a>
         </div>
+      </div>
+      <div class="clear"></div>
     </div>
+
+
+    <!-- WhatWeNeed -->
+    <div class="Section2">
+      <p class="TitleSection">WHAT WE NEED</p>
+      <div class="btmLineTitile"></div>
+      <div class="List">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quidem.</p>
+        <img src="images/checked.png" alt="">
+        <div class="clear"></div>
+      </div>
+      <div class="List">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quidem.</p>
+        <img src="images/checked.png" alt="">
+        <div class="clear"></div>
+      </div>
+      <div class="List">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quidem.</p>
+        <img src="images/checked.png" alt="">
+        <div class="clear"></div>
+      </div>
+      <div class="List">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quidem.</p>
+        <img src="images/checked.png" alt="">
+        <div class="clear"></div>
+      </div>
+      <div class="List">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quidem.</p>
+        <img src="images/checked.png" alt="">
+        <div class="clear"></div>
+      </div>
+    </div>
+  </div>
     
     <!--BAGIAN BENEFIT-->
     <div class="benefit-wrapper">
