--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="https://images.unsplash.com/photo-1453728013993-6d66e9c9123a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8dmlld3xlbnwwfHwwfHw%3D&w=1000&q=80" alt="">
         <div class="txtDescription">
           <p class="TitleSection">Intership Deskorat Digital Bussnis</p>
-          <p class="DescritptionSection">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nostrum consequatur beatae, totam nemo a quae reprehenderit doloremque sunt, voluptates alias dolores quo voluptatem nobis expedita aperiam eaque perspiciatis odit facere neque possimus molestias? Ad minima ipsa doloremque facilis libero repudiandae, voluptatum aliquid ipsam eum, sint earum quas, adipisci laboriosam exercitationem praesentium itaque. Deserunt reiciendis ab cupiditate nobis error corporis?</p>
+          <p class="DescritptionSection">Internship Program PT. Telekomunikasi Indonesia Tbk Directorate of Digital Business (TELKOM DDB) provides opportunities for students to conduct research or support work programs within the Telkom DDB business environment for a period of 6 (six) months to 1 (one) year. You will get many benefits after you join the Internship Program at DDB Telkom.</p>
   
           <div class="btn-wrapper">
             <a href="#" class="btn btn-1">Lihat Detail</a>
@@ -48,7 +48,12 @@
         <p class="TitleSection">WHAT WE NEED</p>
         <div class="btmLineTitile"></div>
         <div class="List">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quidem.</p>
+          <p>Active students S1 level 3 (min 6th semester) or D3 level 2 (min 4th semester)</p>
+          <img src="images/checked.png" alt="">
+          <div class="clear"></div>
+        </div>
+        <div class="List">
+          <p>Committed to working full time (Monday-Friday) for 6-12 months</p>
           <img src="images/checked.png" alt="">
           <div class="clear"></div>
         </div>
@@ -58,17 +63,12 @@
           <div class="clear"></div>
         </div>
         <div class="List">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quidem.</p>
+          <p>Mampu berkomunikasi dengan baik serta dapat bekerja dalam tim maupun mandiri</p>
           <img src="images/checked.png" alt="">
           <div class="clear"></div>
         </div>
         <div class="List">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quidem.</p>
-          <img src="images/checked.png" alt="">
-          <div class="clear"></div>
-        </div>
-        <div class="List">
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quidem.</p>
+          <p>Willing to be placed in the working area of ​​Jakarta and/or Bandung</p>
           <img src="images/checked.png" alt="">
           <div class="clear"></div>
         </div>
