--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="txtDescripton">
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure totam quidem repellendus odit incidunt tenetur voluptate eum? Quos alias, porro dignissimos velit voluptatem, in, debitis laborum et vitae vero sapiente! Unde labore laborum voluptatem eaque enim, magni at numquam, quaerat aut ea minima eius neque sint ipsum fuga aspernatur suscipit. Distinctio excepturi dolore laborum culpa facilis odit velit vero ducimus!</p>
+        <p>Internship Program PT. Telekomunikasi Indonesia Tbk Directorate of Digital Business (TELKOM DDB) provides opportunities for students to conduct research or support work programs within the Telkom DDB business environment for a period of 6 (six) months to 1 (one) year. You will get many benefits after you join the Internship Program at DDB Telkom.</p>
         <div class="buttonGroup">
           <a href="#" class="btn btn-1">Lihat Detail</a>
           <a href="#" class="btn btn-1">Lihat Internship</a>
@@ -50,19 +50,19 @@
     <div class="underlineT"></div>
     <div class="container">
       <div class="list-wwn">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed ducimus temporibus asperiores accusantium eius doloremque!</p>
-        <imgimages/checked.png" alt="">
-      </div>
-      <div class="list-wwn">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed ducimus temporibus asperiores accusantium eius doloremque!</p>
+        <p>Active students S1 level 3 (min 6th semester) or D3 level 2 (min 4th semester)</p>
         <img src="images/checked.png" alt="">
       </div>
       <div class="list-wwn">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed ducimus temporibus asperiores accusantium eius doloremque!</p>
+        <p>Mampu berkomunikasi dengan baik serta dapat bekerja dalam tim maupun mandiri</p>
         <img src="images/checked.png" alt="">
       </div>
       <div class="list-wwn">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed ducimus temporibus asperiores accusantium eius doloremque!</p>
+        <p>Committed to working full time (Monday-Friday) for 6-12 months</p>
+        <img src="images/checked.png" alt="">
+      </div>
+      <div class="list-wwn">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, quidem.</p>
         <img src="images/checked.png" alt="">
       </div>
     </div>
