--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link href='images/logo-06.jpg' rel="shortcut icon">
   <title>Internship</title>
+  <link href='images/logo-06.jpg' rel="shortcut icon">
 </head>
 
 <body>
