--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="banners">
     <div class="container">
       <div class="txtDescripton">
-        <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+        <h3>Internship Direktorat Business</h3>
         <p>Internship Program PT. Telekomunikasi Indonesia Tbk Directorate of Digital Business (TELKOM DDB) provides opportunities for students to conduct research or support work programs within the Telkom DDB business environment for a period of 6 (six) months to 1 (one) year. You will get many benefits after you join the Internship Program at DDB Telkom.</p>
         <div class="buttonGroup">
           <a href="#" class="btn btn-1">Lihat Detail</a>
